Think cell hud cropper for IE bug is working.

--- a/src/swarm/shared/css/cell.css
+++ b/src/swarm/shared/css/cell.css
@@ -71,7 +71,6 @@
 
 .sm_cell_hud
 {
-	position:fixed;
 	padding:4px;
     padding-top: 3px;
 	
@@ -87,7 +86,7 @@
 	/*border: solid 1px #FFFFFF;*/
 	background: #CCCCCC;
     
-    width: 503px;
+    width:100%;
     height: 47px;
     
    -webkit-border-top-left-radius: 8px;
